src/test/wacc/invalid/semanticErr/array/noArrayCovariance.wacc
# Arrays should not be covariant
# Thanks to Nathaniel Burke

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  char[][] acs = [] ;
  string[] bad = acs
end
